# Gateway

./: CMakeLists.txt  README.md
docs/: DoxyFile.in
include/sdk/: AttestationStore.hpp  CircuitBreaker.hpp  DilithiumSignature.hpp  FinalChainSubmitter.hpp  FinalDefiSDK.hpp  KyberEncryption.hpp  MerkleTree.hpp  MessageCompression.hpp  NodeRegistry.hpp  PQNetworking.hpp  SecureLogger.hpp  ThreadPool.hpp  ThresholdCrypto.hpp  TransactionStore.hpp  constants.hpp  errors.hpp  types.hpp  version.hpp
include/sdk/config/: secure_gateway.conf
include/sdk/secure_gateway/: AuditLayer.hpp  HTTPServer.hpp  NodeRegistrySecure.hpp  SecureGateway.hpp  TransactionProcessor.hpp
src/: MessageCompression.cpp  main.cpp
src/sdk/: AttestationStore.cpp  CircuitBreaker.cpp  DilithiumSignature.cpp  FinalChainSubmitter.cpp  FinalDefiSDK.cpp  KyberEncryption.cpp  MessageCompression.cpp  NodeRegistry.cpp  SecureLogger.cpp  ThreadPool.cpp  ThresholdCrypto.cpp
src/sdk/secure_gateway/: AuditLayer.cpp  HTTPServer.cpp  NodeRegistrySecure.cpp  SecureGateway.cpp  TransactionProcessor.cpp
